Fixing split(). Adding merge() and salt and pepper noise functions.

--- a/Assignment 1/Makefile
+++ b/Assignment 1/Makefile
@@ -1,2 +1,2 @@
 all:
-	g++ `pkg-config --cflags opencv` main.cpp `pkg-config --libs opencv` -o main
+	g++ `pkg-config --cflags opencv` main.cpp Color.cpp Noise.cpp `pkg-config --libs opencv` -o main
