--- a/Assignment 1/Makefile
+++ b/Assignment 1/Makefile
@@ -1,2 +1,7 @@
+CXX = g++ -O2 -Wall
+
 all:
-	g++ `pkg-config --cflags opencv` -O2 main.cpp Color.cpp Noise.cpp Filter.cpp `pkg-config --libs opencv` -o main
+	$(CXX) `pkg-config --cflags opencv` -O2 main.cpp Color.cpp Noise.cpp Filter.cpp `pkg-config --libs opencv` -o main.out
+
+clean:
+	rm -f main.out *.o
