--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -22,15 +22,15 @@ jobs:
     
     - name: Setup OpenCV
       uses: Dovyski/setup-opencv-action@v1
+      
+    - name: Setup boost
+      run: sudo apt-get update && sudo apt-get install -yq libboost1.65-dev
 
     - name: Configure CMake
-      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
-      # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
       working-directory: Assignment 1
       run:
-       cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+       cmake .
 
     - name: Build
       working-directory: Assignment 1
-      # Build your program with the given configuration
-      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+      run: make
