--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -12,18 +12,22 @@ env:
 
 jobs:
   build:
-    # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
-    # You can convert this to a matrix build if you need cross-platform coverage.
-    # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
     runs-on: ubuntu-latest
-    container: 
-      image: pachyderm/opencv
 
     steps:
     - uses: actions/checkout@v2
+    
+    - name: Setup Cache OpenCV
+      id: opencv-cache
+      uses: actions/cache@v2
+      with:
+        path: ./opencv-install
+        key: ${{ runner.os }}-opencv-cache
 
-    - name: Setup boost
-      run: sudo apt-get update && sudo apt-get install -yq libboost1.65-dev
+    - name: Setup Boost
+      run: |
+        sudo apt update
+        sudo apt install -y libboost-all-dev
 
     - name: Configure CMake
       working-directory: Assignment 1
