--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -17,12 +17,19 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     
-    - name: Setup Cache OpenCV
+    - name: Cache OpenCV
       id: opencv-cache
       uses: actions/cache@v2
       with:
         path: ./opencv-install
         key: ${{ runner.os }}-opencv-cache
+
+    - name: Install OpenCV
+      uses: rayandrews/with-opencv-action@v1
+      with:  
+        dir: ./opencv-install
+        cached: ${{ steps.opencv-cache.outputs.cache-hit }}
+        opencv-version: '4.0.0'
 
     - name: Setup Boost
       run: |
